datasets/bench4bl/hbase/queries/long/15840.txt
HBASE-15669 seems to have broken generating code for WAL.proto in cpp.



In file included from buck-out/gen/if/WAL.pb.cc/WAL.pb.cc:5:0:

buck-out/gen/if/WAL.pb.cc/WAL.pb.h:1103:37: error: 'google::protobuf::uint64 hbase::pb::StoreDescriptor::store_file_size() const' cannot be overloaded

   inline ::google::protobuf::uint64 store_file_size() const;

                                     ^

buck-out/gen/if/WAL.pb.cc/WAL.pb.h:1084:14: error: with 'int hbase::pb::StoreDescriptor::store_file_size() const'

   inline int store_file_size() const;

              ^

In file included from buck-out/gen/if/WAL.pb.cc/WAL.pb.cc:5:0:

buck-out/gen/if/WAL.pb.cc/WAL.pb.h:3527:35: error: prototype for 'google::protobuf::uint64 hbase::pb::StoreDescriptor::store_file_size() const' does not match any in class 'hbase::pb::StoreDescriptor'

 inline ::google::protobuf::uint64 StoreDescriptor::store_file_size() const {

                                   ^

buck-out/gen/if/WAL.pb.cc/WAL.pb.h:3460:12: error: candidate is: int hbase::pb::StoreDescriptor::store_file_size() const

 inline int StoreDescriptor::store_file_size() const {

            ^



BUILD FAILED: //if:if#compile-WAL.pb.cc.oa0460dda,default failed with exit code 1:

c++-cpp-output compile


